durga@48demo.com.bleadtest/src/objects/DeviceUsage__c.object
<CustomObject>
    <fields>
        <fullName>EV_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>DeviceUsages</relationshipLabel>
        <relationshipName>DeviceUsages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IMEI__c</fullName>
        <label>IMEI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OsVersion__c</fullName>
        <label>OsVersion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DeviceUsages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DeviceUsage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EV_id__c</columns>
        <columns>IMEI__c</columns>
        <columns>OsVersion__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Dev_{000000000}</displayFormat>
        <label>DeviceUsage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DeviceUsages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>